--- a/src/main/resources/templates/addItem.html
+++ b/src/main/resources/templates/addItem.html
@@ -35,20 +35,21 @@
     <div class="card-header">
         Новая задача
     </div>
-        <form th:action="@{/saveItem}" method="POST">
-            <input type="hidden" name="id" value="0"/>
-            <div class="form-group">
-                <label for="name">Название</label>
-                <input type="text" class="form-control" name="name" id="name">
-            </div>
-            <div class="form-group">
-                <label for="name">Описание</label>
-                <input type="text" class="form-control" name="description" id="description">
-            </div>
-            <div class="form-check">
-                <input type="checkbox" name="done" class="form-check-input" id="done">
-                <label class="form-check-label" for="done">Выполнено</label>
-            </div>
+    <form th:action="@{/saveItem}" method="POST">
+        <input type="hidden" name="id" value="0"/>
+        <div class="form-group">
+            <label for="name">Название</label>
+            <input type="text" class="form-control" name="name" id="name">
+        </div>
+        <div class="form-group">
+            <label for="name">Описание</label>
+            <!--                <input type="text" class="form-control" name="description" id="description">-->
+            <textarea class="form-control" name="description" id="description" rows="5"></textarea>
+        </div>
+        <div class="form-check">
+            <input type="checkbox" name="done" class="form-check-input" id="done">
+            <label class="form-check-label" for="done">Выполнено</label>
+        </div>
         <button type="submit" class="btn btn-primary mt-3">Сохранить</button>
     </form>
 </div>
