--- a/src/main/resources/templates/descriptionItem.html
+++ b/src/main/resources/templates/descriptionItem.html
@@ -9,11 +9,14 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
           integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
-            integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+            integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
+            crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
-            integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+            integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+            crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
-            integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+            integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
+            crossorigin="anonymous"></script>
 
     <title>ToDo</title>
 </head>
@@ -21,7 +24,8 @@
 <div class="container">
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <a class="navbar-brand" href="#">ToDo</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
+                aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
@@ -49,6 +53,10 @@
                 </p>
                 <p class="card-text" th:text="${item.created}"/>
                 <p>
+                    <b>Автор:</b>
+                </p>
+                <p class="card-text" th:text="${item.user.name}"/>
+                <p>
                     <b>Статус:</b>
                 </p>
                 <span th:if="${item.done}">
@@ -59,15 +67,15 @@
                 </span>
             </div>
         </div>
-        <div class="btn-group" >
-            <form  th:action="@{|/setDone/${item.id}|}" method="GET">
-                <button type="submit" class="btn btn-primary mt-3" style="margin-right: 16px" >Выполнено</button>
+        <div class="btn-group">
+            <form th:action="@{|/setDone/${item.id}|}" method="GET">
+                <button type="submit" class="btn btn-primary mt-3" style="margin-right: 16px">Выполнено</button>
             </form>
-            <form  th:action="@{|/formUpdateItem/${item.id}|}" method="GET">
-                <button type="submit" class="btn btn-primary mt-3" style="margin-right: 16px" >Отредактировать</button>
+            <form th:action="@{|/formUpdateItem/${item.id}|}" method="GET">
+                <button type="submit" class="btn btn-primary mt-3" style="margin-right: 16px">Отредактировать</button>
             </form>
-            <form  th:action="@{|/deleteItem/${item.id}|}" method="GET">
-                <button type="submit" class="btn btn-primary mt-3" >Удалить</button>
+            <form th:action="@{|/deleteItem/${item.id}|}" method="GET">
+                <button type="submit" class="btn btn-primary mt-3">Удалить</button>
             </form>
         </div>
     </div>
