4. Категории в TODO List

--- a/src/main/resources/templates/addItem.html
+++ b/src/main/resources/templates/addItem.html
@@ -1,10 +1,8 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org" lang="en">
 <head>
-    <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
           integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
@@ -32,9 +30,6 @@
             </div>
         </div>
     </nav>
-    <div class="card-header">
-        Новая задача
-    </div>
     <form th:action="@{/saveItem}" method="POST">
         <input type="hidden" name="id" value="0"/>
         <div class="form-group">
@@ -42,8 +37,16 @@
             <input type="text" class="form-control" name="name" id="name">
         </div>
         <div class="form-group">
+            <label for="category.id">Категории</label>
+            <select class="form-control" id="category.id" name="listCategories">
+                <option th:each="category : ${categories}"
+                        th:value="${category.id}"
+                        th:text="${category.name}">
+                </option>
+            </select>
+        </div>
+        <div class="form-group">
             <label for="name">Описание</label>
-            <!--                <input type="text" class="form-control" name="description" id="description">-->
             <textarea class="form-control" name="description" id="description" rows="5"></textarea>
         </div>
         <div class="form-check">
