--- a/src/main/resources/templates/updateItem.html
+++ b/src/main/resources/templates/updateItem.html
@@ -37,7 +37,7 @@
     <div class="row pt-3">
         <div class="card" style="width: 100%">
             <div class="card-header">
-                Редатирование задания
+                Редактирование задания
             </div>
             <div class="card-body">
                 <form th:action="@{/updateItem}" method="POST" th:object="${item}">
@@ -47,10 +47,18 @@
                         <input type="text" class="form-control" name="name" id="name" th:field="*{name}">
                     </div>
                     <div class="form-group">
+                        <label for="category.id">Категории</label>
+                        <select class="form-control" id="category.id" name="listCategories">
+                            <option th:each="category : ${categories}"
+                                    th:value="${category.id}"
+                                    th:text="${category.name}">
+                            </option>
+                        </select>
+                    </div>
+                    <div class="form-group">
                         <label for="name">Описание</label>
                         <textarea class="form-control" name="description" id="description" rows="5"
                                   th:field="*{description}"></textarea>
-                        <!--<input type="text" class="form-control" name="description" id="description" th:field="*{description}">-->
                     </div>
                     <button type="submit" class="btn btn-primary">Сохранить</button>
                 </form>
